themes: fix HighContrastDark GTK-3 theme
- remove fugly semi-transparent borders
- remove fugly top round corners

--- a/themes/HighContrastDark/gtk-3.0/gtk.css
+++ b/themes/HighContrastDark/gtk-3.0/gtk.css
@@ -740,7 +740,7 @@ GtkComboBox {
   border-width: 0 0 1px;
   border-style: solid;
   border-color: #808080;
-  border-radius: 7px 7px 0 0;
+  border-radius: 0px 0px 0 0;
   background-color: transparent;
   background-image: linear-gradient(to bottom, black, #000000);
   box-shadow: inset 0 -1px #272727, inset 0 1px #000000;
@@ -2135,22 +2135,6 @@ GtkColorChooserWidget #552222-color-button {
 /**********************
  * Window Decorations *
  *********************/
-.window-frame {
-  border-radius: 7px 7px 0 0;
-  border-width: 0px;
-  box-shadow: 0 3px 9px 1px rgba (255, 255, 255, 0.50), 0 0 0 1px rgba (255, 255, 255, 0.23);
-  /* this is used for the resize cursor area */
-  margin: 10px; }
-  .window-frame:backdrop {
-    box-shadow: 0 2px 6px 2px rgba (255, 255, 255, 0.20), 0 0 0 1px rgba (255, 255, 255, 0.18); }
-  .window-frame.tiled {
-    border-radius: 0; }
-  .window-frame.csd.popup {
-    border-radius: 0;
-    box-shadow: 0 1px 2px rgba (255, 255, 255, 0.20), 0 0 0 1px rgba (255, 255, 255, 0.13); }
-  .window-frame.csd.tooltip {
-    border-radius: 5px;
-    box-shadow: none; }
 
 .button.titlebutton {
   padding: 8px;
